build(docker): 优化Docker配置和构建流程
- 添加前端.dockerignore文件排除不必要的文件
- 更新前端Dockerfile使用node 20并添加镜像源和调试命令
- 简化后端Dockerfile移除不必要的注释和参数
- 调整docker-compose.yml格式并移除版本号

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,25 @@
 # 构建阶段
-FROM node:18-alpine as build
+FROM node:20-alpine as build
 
 WORKDIR /app
 
-# 复制 package.json 和 package-lock.json (或 pnpm-lock.yaml)
+# 设置国内 npm 镜像源
+RUN npm config set registry https://registry.npmmirror.com
+
+# 复制 package.json
 COPY package*.json ./
 
 # 安装依赖
 RUN npm install
 
+# 检查依赖安装情况
+RUN ls -la node_modules
+
 # 复制源代码
 COPY . .
+
+# 检查构建前的文件结构
+RUN ls -la
 
 # 构建应用
 RUN npm run build
