--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -8,15 +8,11 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
-# 安装系统依赖 (如果需要)
-# RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev && rm -rf /var/lib/apt/lists/*
-
 # 复制依赖文件
 COPY requirements.txt .
 
 # 安装 Python 依赖
-# 注意：如果项目中使用了 torch (pytorch)，建议使用 --extra-index-url 指定 cpu 版本以减小镜像体积
-RUN pip install --no-cache-dir -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cpu
+RUN pip install --no-cache-dir -r requirements.txt
 
 # 复制项目代码
 COPY . .
